collections screen UI

--- a/assets/translations/uk-UA.json
+++ b/assets/translations/uk-UA.json
@@ -22,5 +22,9 @@
   "added": "Додано",
   "sold": "Продано",
   "lost": "Втрачено",
-  "menu": "Меню"
+  "menu": "Меню",
+  "settings": "Налаштування",
+  "bucket": "Корзина",
+  "exit": "Вихід",
+  "tutorial": "Навчання"
 }
